--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/prozess_box_Prozessdetails.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/prozess_box_Prozessdetails.xhtml
@@ -17,13 +17,17 @@
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
     xmlns:t="http://myfaces.apache.org/tomahawk"
+    xmlns:p="http://primefaces.org/ui"
     >
+
+    <p:importEnum type="org.kitodo.enums.ObjectMode" var="objectMode"/>
+
     <table cellpadding="3" cellspacing="0" style="width:100%">
         <tr style="vertical-align:top">
             <td>
                 <!-- Box für die Darstellung der Details -->
                 <h:form id="processdetails">
-                    <ui:fragment rendered="#{ProzessverwaltungForm.modusBearbeiten!='prozess'}">
+                    <ui:fragment rendered="#{ProzessverwaltungForm.editMode.mode != 'process'}">
                         <table cellpadding="3" cellspacing="0" width="100%" class="main_statistikboxen">
                             <tr>
                                 <td class="main_statistikboxen_row1">
@@ -51,8 +55,8 @@
                                                     <h:commandLink title="#{msgs.prozessdetailsBearbeiten}"
                                                                    action="#{NavigationForm.Reload}" style=";margin-right:20px">
                                                         <h:graphicImage value="/pages/images/buttons/edit_20.gif" alt="edit"/>
-                                                        <t:updateActionListener property="#{ProzessverwaltungForm.modusBearbeiten}"
-                                                                                value="prozess"/>
+                                                        <t:updateActionListener property="#{ProzessverwaltungForm.editMode}"
+                                                                                value="#{objectMode.PROCESS}"/>
                                                     </h:commandLink>
                                                 </td>
                                             </ui:fragment>
@@ -147,7 +151,7 @@
                     </ui:fragment>
                 </h:form>
             </td>
-            <ui:fragment rendered="#{ProzessverwaltungForm.modusBearbeiten!='prozess'}">
+            <ui:fragment rendered="#{ProzessverwaltungForm.editMode.mode != 'process'}">
                 <td>
 
                     <table>
@@ -173,7 +177,7 @@
 
     <h:form>
     <!-- Box für die Bearbeitung der Details -->
-        <ui:fragment rendered="#{ProzessverwaltungForm.modusBearbeiten=='prozess'}">
+        <ui:fragment rendered="#{ProzessverwaltungForm.editMode.mode == 'process'}">
             <table cellpadding="3" cellspacing="0" width="100%" class="eingabeBoxen">
                 <tr>
                     <td class="eingabeBoxen_row1" colspan="2">
@@ -246,7 +250,7 @@
                 <tr>
                     <td class="eingabeBoxen_row3" align="left">
                         <h:commandButton value="#{msgs.abbrechen}" immediate="true" action="#{NavigationForm.Reload}">
-                            <t:updateActionListener property="#{ProzessverwaltungForm.modusBearbeiten}" value=""/>
+                            <t:updateActionListener property="#{ProzessverwaltungForm.editMode}" value="#{objectMode.NONE}"/>
                         </h:commandButton>
                     </td>
                     <td class="eingabeBoxen_row3" align="right">
@@ -257,7 +261,7 @@
                                          onclick="return confirm('#{msgs.sollDieserEintragWirklichGeloeschtWerden}?')"
                                          rendered="#{ProzessverwaltungForm.process.id != null}"/>
                         <h:commandButton value="#{msgs.speichern}" action="#{ProzessverwaltungForm.save}" id="absenden">
-                            <t:updateActionListener property="#{ProzessverwaltungForm.modusBearbeiten}" value=""/>
+                            <t:updateActionListener property="#{ProzessverwaltungForm.editMode}" value="#{objectMode.NONE}"/>
                         </h:commandButton>
                     </td>
                 </tr>
